--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -88,6 +88,14 @@
               </svg>
               Articles
             </a>
+            <a href="{{ site.baseurl }}/elite-intelligence/" {% if page.url contains "/elite-intelligence/" %}class="active" {% endif %}>
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
+                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                style="margin-right: 4px;">
+                <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
+              </svg>
+              Elite Intelligence
+            </a>
             <a href="{{ site.baseurl }}/quote/" {% if page.url contains "/quote/" %}class="active" {% endif %}>
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
